# homelab-automation

./: .gitignore  .infisical.json  .pre-commit-config.yaml  Taskfile.yml  grafana-values.yaml  mise.toml  values.yaml
actual-budget/: Chart.yaml  values.yaml
affine/: Chart.yaml  values.yaml
ansible/: ansible.cfg  setup-k8s-agents.yml  setup-k8s-initial.yml  setup-k8s-master.yml  setup-k8s-servers.yml  setup-k8s-workers.yml  setup-vm.yml  setup-wsl.yml  uninstall-k8s-agent.yml  uninstall-k8s-server.yml  uninstall-k8s.yml  upgrade-k8s.yml
apod/: .env.example  .gitignore  Dockerfile  application.yaml  docker-entrypoint.sh  gunicorn.conf.py  pyproject.toml  server.py  values.yaml
apod-go/: .air.toml  .gitignore  Dockerfile  Taskfile.yml  go.mod  go.sum  main.go
apod/apod/: values.yaml
apod/templates/: deployment.yaml  ingress.yaml  service.yaml  servicemonitor.yaml
apod/templates/tests/: test-connection.yaml
apps/: application.yaml
argo-rollouts/: install.yaml  values.yaml
argocd/: cm.yaml  helmfile.yaml  ingress.yaml  install.yaml  namespace.yaml  values.yaml
arrstack/: helmfile.yaml  namespace.yaml  pvc.yaml
atuin/: Chart.yaml  values.yaml
bind9/: .gitignore  config.yml  docker-compose.yaml  traefik.yml
bytebase/: values.yaml
cert-manager/: certificate.yaml  clusterissuer-prod.yaml  clusterissuer-staging.yaml  secret.yaml  secrets.pub.yaml
cloudflare/: Chart.yaml  secret.yaml  values.yaml
core/: application.yaml
core-services/: coredns.yaml  helmfile.yaml  metrics-server.yaml
dagster/: ingress.yaml
discai/: Chart.yaml  values.yaml
(+733 files in other folders)
